--- a/src/app/app-components/agency-picker/agency-picker.style.scss
+++ b/src/app/app-components/agency-picker/agency-picker.style.scss
@@ -115,9 +115,37 @@ select[multiple]{
   height:6em;
 }
 
-.usa-agency-picker-search-input{
+.usa-agency-picker-search-input-wrapper{
+  position:relative;
   width: calc(100% - 120px);
   float:left;
+  min-height:1px;
+  .usa-agency-picker-search-input{
+    position:absolute;
+    padding-right:28px;
+  }
+  .usa-agency-picker-search-reset{
+    position:absolute;
+    right:7px;
+    line-height:46px;
+
+    i{
+      color: #d9d9d9;
+    }
+  }
+  .usa-agency-picker-search-reset-active{
+    position:absolute;
+    right:7px;
+    line-height:46px;
+
+    &:hover{
+      cursor:pointer;
+    }
+
+    i{
+      color: #777;
+    }
+  }
 }
 
 .usa-agency-picker-icon-area{
