--- a/src/app/app-components/agency-picker/agency-picker.template.html
+++ b/src/app/app-components/agency-picker/agency-picker.template.html
@@ -11,7 +11,10 @@
     </div>
     <div class="agency-picker-dropdown-area usa-grid">   
         <div class="agency-picker-search-area">
-            <input type="text" class="usa-agency-picker-search-input" (blur)="onInputBlur($event)" aria-autocomplete="list" aria-haspopup="true" (keydown)="keydownHandler($event)" [(ngModel)]="searchTerm" (ngModelChange)="searchTermChange($event)" maxlength="75"/>
+            <div class="usa-agency-picker-search-input-wrapper">
+                <input type="text" class="usa-agency-picker-search-input" (blur)="onInputBlur($event)" aria-autocomplete="list" aria-haspopup="true" (keydown)="keydownHandler($event)" [(ngModel)]="searchTerm" (ngModelChange)="searchTermChange($event)" maxlength="75"/>
+                <span [ngClass]="resetIconClass"><i class="fa fa-times-circle" (click)="onResetClick()"></i></span>
+            </div>
             <ul (blur)="onInputBlur($event)" #autocompletelist tabindex="0" *ngIf="autoCompleteToggle" class="autocomplete" (mousedown)="cancelBlurMethod()">
                 <li *ngIf="showAutocompleteMsg" class="autocomplete-msg">{{autocompleteMsg}}</li>
                 <li *ngFor="let result of autoComplete; let i = index;" (mouseover)='autocompleteMouseover(i)' [ngClass]="i === autocompleteIndex?'autocomplete-selected':''" (mousedown)="autocompleteSelection(result)">{{result.name}}</li>
