--- a/src/app/app-components/agency-picker/agency-picker.style.scss
+++ b/src/app/app-components/agency-picker/agency-picker.style.scss
@@ -18,7 +18,6 @@ $h3-font-size: 2rem;
     @content;
   }
 }
-
 @mixin search-icon {
   background-image: url('~uswds/src/img/search.png');
   background-image: url('~uswds/src/img/search.svg');
@@ -26,11 +25,19 @@ $h3-font-size: 2rem;
   background-repeat: no-repeat;
 }
 
-select[multiple]{
-  background-image:none;
-  border-right-width:1px;
+.usa-input-error{
+  input{
+    width:100%;
+  } 
+  /*
+  .usa-agency-picker-browse-area .helpme select{
+    width:100%!important;
+    background:#ccc;
+  }*/
 }
-
+.usa-agency-picker-browse-area{
+  clear:both;
+}
 .usa-agency-picker-selection-area{
   position:relative;
 }
