sass tweak for usa-input-error

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -44,3 +44,11 @@ h2{
   display: block;
   margin: 3px 0px 3px 0px;
 }
+
+.usa-input-error{
+  .usa-agency-picker-dropdown-area{
+    select{
+      width:100%;
+    }
+  }
+}
