--- a/src/app/app-components/agency-picker/agency-picker.style.scss
+++ b/src/app/app-components/agency-picker/agency-picker.style.scss
@@ -33,6 +33,16 @@ $h3-font-size: 2rem;
 .usa-agency-picker-browse-area{
   clear:both;
 }
+
+.usa-agency-picker-button-area{
+  float:right;
+  overflow:auto;
+  button{
+    margin-right:0;
+    margin-left:8.5px;
+  }
+}
+
 .usa-agency-picker-selection-area{
   position:relative;
 }
