--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -202,6 +202,30 @@
       <div [innerHTML]="opportunity.data?.descriptions[0].content | fixhtml"></div>
     </section>
 
+    <div class="usa-width-one-whole">
+      <h2>Packages</h2>
+      <ng-container *ngIf="attachment">
+        <ng-container *ngFor="let element of attachment.packages">
+          <h3>{{ element.name }} ({{ element.attachments?.length }})</h3>
+          <p><b>Type:</b> {{ element.type }}</p>
+          <p><b>Date Posted:</b> {{ element.postedDate | dateFormat: 'MMM DD, YYYY' }}    <b>Secure:</b>{{isPublic(element.access)}}</p>
+          <p>{{isPublic(element.access)}}</p>
+          <ng-container *ngIf = "element.access === 'Private'">Secure/sensitive attachments are not currently available, please go to <a href="https://www.fbo.gov/">FBO.gov</a> to view this attachment.</ng-container>
+          <ng-container *ngIf="element.access === 'Public'">
+            <ng-container *ngFor="let element of attachment.attachments">
+              <ng-container *ngFor="let resource of attachment.resources">
+                <ng-container *ngIf="element.resourceId === resource.resourceId">
+                  <a href="{{resource.uri}}">{{resource.description}}</a>
+                </ng-container>
+              </ng-container>
+            </ng-container>
+          </ng-container>
+        </ng-container>
+      </ng-container>
+
+    </div>
+
+
     <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
       <h2>Contact Information</h2>
       <div class="usa-grid-full" *ngIf="opportunityLocation">
