--- a/src/app/Help/sections/accounts/accounts.template.html
+++ b/src/app/Help/sections/accounts/accounts.template.html
@@ -1,5 +1,5 @@
 <section>
-  <h2 class="m_T-2x">About SAM.gov</h2>
+  <h2 class="m_T-2x">User Accounts</h2>
   <div class="usa-grid-full">
     <h3 id="resetPwd" class="p_L-3x">Reset Password</h3>
     <p class="p_L-8x">
