--- a/src/app/Help/sections/reference-library/reference-library.style.css
+++ b/src/app/Help/sections/reference-library/reference-library.style.css
@@ -8,6 +8,7 @@ h5{
   left: 10px;
   font-size: 16px;
   text-decoration: none;
+  z-index: 200;
 }
 
 .featured-reference-title:hover{
@@ -19,17 +20,48 @@ h5{
   position: absolute;
   top:10px;
   right:10px;
-  z-index: 1000;
+}
+
+.featured-reference-close{
+  position: absolute;
+  top:20px;
+  right:10px;
+  text-decoration: none;
+}
+
+.featured-reference-close:hover{
+  cursor: pointer;
 }
 
 .reference-content-link{
   position: absolute;
   bottom: 3px;
-  right: 3px;
+  right: 10px;
 }
 
 .reference-image{
-  opacity: 0.2;
+
+}
+
+.reference-image-layer-unselect, .reference-image-layer-select{
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.reference-image-layer-unselect{
+  /*background-color:rgba(214,215,217,0.6);*/
+  background: #aaa;
+  background-color:rgba(255,255,255,0.8);
+}
+
+.reference-image-layer-unselect:hover, .reference-image-layer-select{
+  cursor: pointer;
+  background-color:rgba(32,84,147,0.8);
+  color: #ffffff;
 }
 
 .reference-image:hover{
@@ -41,7 +73,8 @@ h5{
 }
 
 .black-border{
-  border: 2px solid black
+  border: 2px solid #000;
+  /*change for detail border*/
 }
 
 .div-fill{
@@ -81,6 +114,7 @@ h5{
   bottom: -15px;
   left: 30%;
   border-top-color: #000;
+/*change for detail border*/
   border-width: 15px;
 }
 
@@ -90,5 +124,16 @@ h5{
   border-bottom: 1px solid #fff;
 }
 
+.item-border-unselect{
+  border: 2px #aeb0b5 solid;
+}
 
+.item-border-unselect:hover, .item-border-select{
+  border: 2px #000 solid;
+  /*change for icon border*/
+}
+
+.white-text{
+  color: #ffffff;
+}
 
