--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -205,17 +205,26 @@
     <div class="usa-width-one-whole">
       <h2>Packages</h2>
       <ng-container *ngIf="attachment">
-        <ng-container *ngFor="let element of attachment.packages">
-          <h3>{{ element.name }} ({{ element.attachments?.length }})</h3>
-          <p><b>Type:</b> {{ element.type }}</p>
-          <p><b>Date Posted:</b> {{ element.postedDate | dateFormat: 'MMM DD, YYYY' }}    <b>Secure:</b>{{isPublic(element.access)}}</p>
-          <p>{{isPublic(element.access)}}</p>
-          <ng-container *ngIf = "element.access === 'Private'">Secure/sensitive attachments are not currently available, please go to <a href="https://www.fbo.gov/">FBO.gov</a> to view this attachment.</ng-container>
-          <ng-container *ngIf="element.access === 'Public'">
-            <ng-container *ngFor="let element of attachment.attachments">
+        <ng-container *ngFor="let package of attachment.packages">
+          <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
+          <p><b>Type:</b> {{ package.type }}</p>
+          <p><b>Date Posted:</b> {{ package.postedDate | dateFormat: 'MMM DD, YYYY' }}    <b>Secure:</b>{{isSecure(package.access)}}</p>
+          <ng-container *ngIf = "package.access === 'Private'">Secure/sensitive attachments are not currently available, please go to <a href="https://www.fbo.gov/">FBO.gov</a> to view this attachment.</ng-container>
+          <ng-container *ngIf="package.access === 'Public'">
+            <!--<p>It's public</p>-->
+            <ng-container *ngFor="let element of package.attachments">
+              <!--<p>Element: {{element}}</p>-->
               <ng-container *ngFor="let resource of attachment.resources">
+                <!--<p>Resource: {{resource}}</p>-->
                 <ng-container *ngIf="element.resourceId === resource.resourceId">
-                  <a href="{{resource.uri}}">{{resource.description}}</a>
+                  <!--<p>Description</p>-->
+                  <ng-container *ngIf="resource.type === 'link'">
+                    <p><a href="{{resource.uri}}">{{resource.description}}</a></p>
+                  </ng-container>
+                  <ng-container *ngIf="resource.type === 'file'">
+                    <p><a href="{{getDownloadFileURL(resource.resourceId)}}">{{resource.description}}</a></p>
+                  </ng-container>
+
                 </ng-container>
               </ng-container>
             </ng-container>
