convert some css to sass

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -17,6 +17,7 @@
 @import 'components/pagination';
 @import 'components/header';
 @import 'components/agency-picker';
+@import 'components/multiselect';
 
 
 html, body{
