--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,23 +1,22 @@
-$header-box-shadow: rgba(1, 2, 2, 0.1);
-
 samHeader {
   header {
-    background-color: $color-primary-darkest;
-    box-shadow: 0 2px 4px $header-box-shadow;
+    background-color: #112e51;
+    box-shadow: 0 2px 4px rgba(1, 2, 2, 0.1);
     padding: 3px 0;
     text-align: center;
-    height: 65px;
+    height: 81px;
   }
 
-  .align-top{
+  .align-top {
     display: inline-block;
     vertical-align: top;
   }
 
-  img{
-    margin-top:1.25rem;
-    width:30rem;
-    height:3rem;
+  img {
+    margin-top: 1.25rem;
+    width: 30rem;
+    height: 3rem;
   }
 }
+
 
