remove redundant build copies, convert alert header to css

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -18,6 +18,7 @@
 @import 'components/header';
 @import 'components/agency-picker';
 @import 'components/multiselect';
+@import 'components/alert-header';
 
 
 html, body{
