--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -106,15 +106,13 @@
         </ul>
       </div>
       <div class="usa-width-one-third">
-        <h4>Catagory Two</h4>
-        <h5>SubCatagory</h5>
+        <h4>Additional Resources</h4>
         <ul class="usa-unstyled-list">
-          <li class="m_B"><a class="usa-external_link">Lipsum external link</a></li>
-          <li class="m_B"><a class="usa-external_link">Lipsum external link</a></li>
-        </ul>
-        <h5 class="m_T-2x">SubCatagory</h5>
-        <ul class="usa-unstyled-list">
-          <li class="m_B"><a class="usa-external_link">Lipsum external link</a></li>
+          <li class="m_B"><a class="usa-external_link" href="https://www.digitalgov.gov/resources/required-web-content-and-links/">Digital Gov</a></li>
+          <li class="m_B"><a class="usa-external_link" href="https://www.whitehouse.gov/omb/circulars/a133_compliance_supplement_2016">
+            OMB Compliance Supplement</a></li>
+          <li class="m_B"><a class="usa-external_link" href="https://www.ppirssrng.csd.disa.mil/">PPIRS-SR NG</a></li>
+          <li class="m_B"><a class="usa-external_link" href="https://oamp.od.nih.gov/acquisition-offices/contract-tool-box/federal-links">Federal Procurement Links</a></li>
         </ul>
       </div>
       <div class="usa-width-one-third">
