--- a/src/app/Help/help.template.html
+++ b/src/app/Help/help.template.html
@@ -1,5 +1,5 @@
 
-<div class="usa-grid-full help-title">
+<div class="usa-grid-full help-title" id="help-page">
     <div class="jumbotron" *ngIf="currentSection==='overview'">
       <h1 class="centered">Help Center</h1>
     </div>
