--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -117,7 +117,7 @@ hr {
   display: inline-block;
 
   // background
-  background-image: url($assets-path + '/img/times_circle.svg'),url($assets-path + 'img/times_circle.png');
+  background-image: url($assets-path + '/img/times_circle.svg'),url($assets-path + '/img/times_circle.png');
   background-color: transparent;
   background-repeat: no-repeat;
   background-size: 15px 15px;
