move organization styles to /styles

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -20,6 +20,12 @@
 @import 'components/multiselect';
 @import 'components/alert-header';
 
+@import 'pages/assistance-listing';
+@import 'pages/help';
+@import 'pages/home';
+@import 'pages/opportunity';
+@import 'pages/organization';
+
 
 html, body{
   height: 100%;
