organization page css fix

--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -1,4 +1,4 @@
-<div class="usa-grid">
+<div class="usa-grid" id="organization-page">
   <div class="usa-width-one-whole" *ngIf="organization">
 
     <h1>{{organization.agencyName || organization.name || organization.orgKey}}</h1>
