move search page styles to /styles

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -1,4 +1,4 @@
-<div class="usa-grid">
+<div class="usa-grid search-page">
 	<div class="usa-width-one">
 		<h1 class="m_T-0 p_T-6x">SAM.gov Search Results</h1>
 	</div>
