move more styles to /styles

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -19,6 +19,8 @@
 @import 'components/agency-picker';
 @import 'components/multiselect';
 @import 'components/alert-header';
+@import 'components/banner';
+@import 'components/searchbar';
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
