--- a/src/ui-kit/form-controls/searchbar/searchbar.style.css
+++ b/src/ui-kit/form-controls/searchbar/searchbar.style.css
@@ -1,79 +1,79 @@
-/** Styles for the drop down filter btn **/
-.filter-btn{
-  width: auto;
-  margin: 0;
-  padding: 8px 10px 8px 10px;
-  border-radius: 5px 0 0 5px;
-  background-color: #e2e1e1;
-  color: #777;
-  height: 3.3rem;
-}
+/*!** Styles for the drop down filter btn **!*/
+/*.filter-btn{*/
+  /*width: auto;*/
+  /*margin: 0;*/
+  /*padding: 8px 10px 8px 10px;*/
+  /*border-radius: 5px 0 0 5px;*/
+  /*background-color: #e2e1e1;*/
+  /*color: #777;*/
+  /*height: 3.3rem;*/
+/*}*/
 
-.filter-btn:hover{
-  background-color: #d9d9d9;
-  color: #2D2D2D;
-}
+/*.filter-btn:hover{*/
+  /*background-color: #d9d9d9;*/
+  /*color: #2D2D2D;*/
+/*}*/
 
-.filter-select{
-  min-width: 180px;
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: -30px;
-}
+/*.filter-select{*/
+  /*min-width: 180px;*/
+  /*opacity: 0;*/
+  /*position: absolute;*/
+  /*left: 0;*/
+  /*top: -30px;*/
+/*}*/
 
-.search-btn{
-  width: auto;
-  margin: 0;
-  padding: 8px 10px 8px 10px;
-  height: 3.3rem;
-}
+/*.search-btn{*/
+  /*width: auto;*/
+  /*margin: 0;*/
+  /*padding: 8px 10px 8px 10px;*/
+  /*height: 3.3rem;*/
+/*}*/
 
-/** Adjust the width of the input search bar**/
-.div-fill{
-  display:block;
-  width: auto;
-  overflow: hidden;
-  float: none;
-  height: 3.3rem;
-}
+/*!** Adjust the width of the input search bar**!*/
+/*.div-fill{*/
+  /*display:block;*/
+  /*width: auto;*/
+  /*overflow: hidden;*/
+  /*float: none;*/
+  /*height: 3.3rem;*/
+/*}*/
 
-.div-left{
-  float:left;
-}
+/*.div-left{*/
+  /*float:left;*/
+/*}*/
 
-.div-right{
-  float:right;
-}
+/*.div-right{*/
+  /*float:right;*/
+/*}*/
 
-.div-left, .div-right{
-  width: auto;
-  display: inline-block;
-}
+/*.div-left, .div-right{*/
+  /*width: auto;*/
+  /*display: inline-block;*/
+/*}*/
 
-.search-inputbar{
-  position: absolute;
-  top:0;
-  left: 0;
-  max-width: 800px;
-  width: 100%;
-}
+/*.search-inputbar{*/
+  /*position: absolute;*/
+  /*top:0;*/
+  /*left: 0;*/
+  /*max-width: 800px;*/
+  /*width: 100%;*/
+/*}*/
 
-.reset-icon,.reset-icon-active{
-  position: absolute;;
-  top:20%;
-  right:10px;
-  z-index: 10;
-}
+/*.reset-icon,.reset-icon-active{*/
+  /*position: absolute;;*/
+  /*top:20%;*/
+  /*right:10px;*/
+  /*z-index: 10;*/
+/*}*/
 
-.reset-icon{
-  color: #d9d9d9;
-}
+/*.reset-icon{*/
+  /*color: #d9d9d9;*/
+/*}*/
 
-.reset-icon-active{
-  color: #777;
-}
+/*.reset-icon-active{*/
+  /*color: #777;*/
+/*}*/
 
-.reset-icon-active:hover{
-  cursor: pointer;
-}
+/*.reset-icon-active:hover{*/
+  /*cursor: pointer;*/
+/*}*/
