move more styles to /styles

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -21,6 +21,8 @@
 @import 'components/alert-header';
 @import 'components/banner';
 @import 'components/searchbar';
+@import 'components/header-links';
+@import 'components/search-header';
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
