move more styles to /styles

--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -1,4 +1,4 @@
-<section>
+<section class="reference-library-page">
   <h2 class="m_T-2x">Reference Library</h2>
   <p class="p_L-3x">
     Albucius lobortis ius et, sea debet inimicus ne,
