--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -30,6 +30,7 @@
 @import 'pages/opportunity';
 @import 'pages/organization';
 @import 'pages/search';
+@import 'pages/reference-library';
 
 
 html, body{
