add page count to alerts page

--- a/src/app/alerts/alerts.style.css
+++ b/src/app/alerts/alerts.style.css
@@ -31,9 +31,12 @@
 }
 
 .alert-block {
+  padding-bottom: 12px;
+}
+
+.alert-block:not(:last-child) {
   margin-bottom: 12px;
   border-bottom: 1px solid grey;
-  padding-bottom: 12px;
 }
 
 .alert-page-title {
