Hide lipsum links in minc

--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -115,7 +115,7 @@
           <li class="m_B"><a class="usa-external_link" href="https://oamp.od.nih.gov/acquisition-offices/contract-tool-box/federal-links">Federal Procurement Links</a></li>
         </ul>
       </div>
-      <div class="usa-width-one-third">
+      <div class="usa-width-one-third" *ngIf="linkToggle()">
         <h4>Catagory Three</h4>
         <h5>SubCatagory</h5>
         <ul class="usa-unstyled-list">
