use absolute resource paths so that images appear in prod and dev

--- a/src/app/Help/sections/overview/overview.template.html
+++ b/src/app/Help/sections/overview/overview.template.html
@@ -19,7 +19,7 @@
     <h3 class="p_L-3x">Federal Service Desk</h3>
     <div class="usa-grid-full">
       <div class="usa-width-one-fourth p_L-8x">
-          <a><img src="../assets/img/fsd_logo.jpg" alt="Federal Service Desk Logo"></a>
+          <a><img src="src/assets/img/fsd_logo.jpg" alt="Federal Service Desk Logo"></a>
       </div>
       <div class="usa-width-three-fourths">
         <p>Ei ius novum aeque aeterno. Saepe dicam assueverit ius te. Et
@@ -31,7 +31,7 @@
     <h3 class="p_L-3x">Interact</h3>
     <div class="usa-grid-full">
       <div class="usa-width-one-fourth p_L-8x">
-        <a><img src="../assets/img/interact.png" alt="Interact Logo"></a>
+        <a><img src="src/assets/img/interact.png" alt="Interact Logo"></a>
       </div>
       <div class="usa-width-three-fourths">
         <p>Ex homero consequuntur signiferumque ius. Velit saepe equidem has
