--- a/src/app/Help/help.template.html
+++ b/src/app/Help/help.template.html
@@ -5,7 +5,7 @@
     </div>
     <div class="usa-grid-full m_B-3x p_T-4x" *ngIf="currentSection!=='overview'">
       <div class="usa-width-one-sixth p_L-6x">
-        <a><img src="../assets/img/blank_icon.png" alt="Help Center Logo"></a>
+        <a><img src="src/assets/img/blank_icon.png" alt="Help Center Logo"></a>
       </div>
       <div class="usa-width-five-sixths p_T-4x p_L-8x">
         <h1>Help Center</h1>
