--- a/src/app/application-content/home/home.template.html
+++ b/src/app/application-content/home/home.template.html
@@ -33,7 +33,7 @@
           <div class="usa-width-one-fourth">
             <div class="usa-width-one-half topic-div-marginCenter">
               <div class="usa-width-one-whole image-wrap topic-image-link">
-                <a (click)="selectTopic('XYZ1')"><img src="../assets/img/blank_icon.png"></a>
+                <a (click)="selectTopic('XYZ1')"><img src="src/assets/img/blank_icon.png"></a>
               </div>
               <div class="usa-width-one-whole centered">
                 <a (click)="selectTopic('XYZ1')">XYZ1</a>
@@ -45,7 +45,7 @@
           <div class="usa-width-one-fourth">
             <div class="usa-width-one-half topic-div-marginCenter">
               <div class="usa-width-one-whole image-wrap topic-image-link">
-                <a (click)="selectTopic('XYZ2')"><img src="../assets/img/blank_icon.png"></a>
+                <a (click)="selectTopic('XYZ2')"><img src="src/assets/img/blank_icon.png"></a>
               </div>
               <div class="usa-width-one-whole centered">
                 <a (click)="selectTopic('XYZ2')">XYZ2</a>
@@ -57,7 +57,7 @@
           <div class="usa-width-one-fourth">
             <div class="usa-width-one-half topic-div-marginCenter">
               <div class="usa-width-one-whole image-wrap topic-image-link">
-                <a (click)="selectTopic('XYZ3')"><img src="../assets/img/blank_icon.png"></a>
+                <a (click)="selectTopic('XYZ3')"><img src="src/assets/img/blank_icon.png"></a>
               </div>
               <div class="usa-width-one-whole centered">
                 <a (click)="selectTopic('XYZ3')">XYZ3</a>
@@ -68,7 +68,7 @@
           <div class="usa-width-one-fourth">
             <div class="usa-width-one-half topic-div-marginCenter">
               <div class="usa-width-one-whole image-wrap topic-image-link">
-                <a (click)="selectTopic('XYZ4')"><img src="../assets/img/blank_icon.png"></a>
+                <a (click)="selectTopic('XYZ4')"><img src="src/assets/img/blank_icon.png"></a>
               </div>
               <div class="usa-width-one-whole centered">
                 <a (click)="selectTopic('XYZ4')">XYZ4</a>
