--- a/src/ui-kit/header/header.scss
+++ b/src/ui-kit/header/header.scss
@@ -17,9 +17,13 @@ header {
 }
 
 img{
-  margin-top:1.25rem;
   width:30rem;
   height:3rem;
 }
 
+.logo-link{
+  margin-top:1rem !important;
+  height: auto;
+  display: inline-block;
+}
 
