--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -17,6 +17,12 @@ samHeader {
     width: 30rem;
     height: 3rem;
   }
+
+  .logo-link{
+    margin-top:0.5rem !important;
+    height: auto;
+    display: inline-block;
+  }
 }
 
 
