adding api call for getting lighter organization data

--- a/src/styles/components/_agency-picker.scss
+++ b/src/styles/components/_agency-picker.scss
@@ -90,7 +90,7 @@ $usa-btn-big-width:     4.5rem;
   position:relative;
   width:100%;
   margin-left:0;
-  background:#eee;
+  background:#f1f1f1;
   .usa-agency-picker-search-area{
     height:52px;
     position:relative;
