initial input-autocomplete component

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -232,3 +232,10 @@
   </div>
 </div>
 <br/>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Autocomplete &lt;samPhoneEntry&gt;</h2>
+  <div class="usa-width-one">
+    <samInputAutocomplete></samInputAutocomplete>
+  </div>
+</div>
+<br/>
