Add in image-library component for reuse purpose
Restructure the reference library html to make it cleaner.
Make image-library component for reuse in both reference library page
and new to sam.gov page

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -25,6 +25,7 @@
 @import 'components/search-header';
 @import 'components/multiselect-dropdown';
 @import 'components/alert-item';
+@import 'components/image-library';
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
