[SAM-497] Display file size information

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -223,10 +223,10 @@
               <ng-container *ngIf="element.resourceId === resource.resourceId">
                 <!-- Description -->
                 <a *ngIf="resource.type === 'link'" href="{{resource.uri}}">
-                  {{resource.description}}
+                  {{resource.description}} <ng-container *ngIf="resource.size != 0">({{resource.size}} bytes)</ng-container>
                 </a>
                 <a *ngIf="resource.type === 'file'" href="{{getDownloadFileURL(resource.resourceId)}}">
-                  {{resource.description}}
+                  {{resource.description}} <ng-container *ngIf="resource.size != 0">({{resource.size}} bytes)</ng-container>
                 </a>
               </ng-container>
             </ng-container>
