--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -10,4 +10,5 @@
   <div  [ngClass]="{'overlay':showOverlay}">
     </div>
 </main>
+<alertFooter></alertFooter>
 <samFooter labelname = "footer" ></samFooter>
