--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -232,3 +232,19 @@
   </div>
 </div>
 <br/>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Alert Footer</h2>
+  <div>
+    <label>Title</label>
+    <input [(ngModel)]="footerAlertModel.title" type="text">
+    <label>Description</label>
+    <input [(ngModel)]="footerAlertModel.description" type="text">
+    <label>Type</label>
+    <select [(ngModel)]="footerAlertModel.type">
+      <option *ngFor="let type of footerAlertTypes">{{ type }}</option>
+    </select>
+    <label>Timer (in milliseconds, 0 is infinite)</label>
+    <input [(ngModel)]="footerAlertModel.timer" type="number" min="0">
+    <button (click)="onFooterAlertBtnClick()">Add Footer alert</button>
+  </div>
+</div>
