--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -25,6 +25,7 @@
 @import 'components/search-header';
 @import 'components/multiselect-dropdown';
 @import 'components/alert-item';
+@import 'components/alert-footer';
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
