--- a/src/app/alerts/alert-footer/alert-footer.template.html
+++ b/src/app/alerts/alert-footer/alert-footer.template.html
@@ -1,3 +1,3 @@
-<div class="globalFixedAlerts">
+<div class="usa-alert-fixed-footer">
 	<samAlert *ngFor="let alert of alerts; let i = index" [dismissTimer]="alert.timer" [showClose]="true" [type]="alert.type" [title]="alert.title" [description]="alert.description" (dismiss)="dismissFooterAlert(i)"></samAlert>
 </div>
