--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -232,3 +232,15 @@
   </div>
 </div>
 <br/>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Date Entry &lt;samDateEntry&gt;</h2>
+  <div class="usa-width-one-third">
+    <samDateEntry [model]="dateModel"></samDateEntry>
+    <samDateEntry [model]="dateModel2"></samDateEntry>
+  </div>
+  <div class="usa-width-one-third">
+    <h3>Model</h3>
+    <pre><code>{{dateModel | json}}</code></pre>
+  </div>
+</div>
+<br/>
